aucun changement majeur

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -2,6 +2,6 @@
   color: red;
 }
 
-#dashBoard #titreDashbord {
+#dashbord #titreDashbord {
   background-color: black;
 }/*# sourceMappingURL=style.css.map */
