--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -38,11 +38,21 @@
         margin: 0;
         padding: 1rem;
         border-radius: 1rem;
-        border: solid grey;
+        border: solid black;
         line-height: .5rem;
 
+        li {
+            .user-view {
+                a {
+                    img {
+                        border: dotted #263238;
+                    }
+                }
+            }
+        }
+
         .deconnexion {
-            color: rgb(54 162 235);
+            color: black;
             font-weight: bold;
             display: flex;
             justify-content: center;
@@ -55,6 +65,7 @@
         }
 
         .contours {
+            border: solid#263238;
             display: flex;
             flex-direction: column;
             background-color: grey;
@@ -67,6 +78,8 @@
                 color: #263238;
                 font-weight: bold;
                 text-transform: capitalize;
+                line-height: .9rem;
+
 
             }
 
@@ -114,14 +127,10 @@
         }
 
         #cardUserTot:hover {
-            color: red;
+
 
             h6 {
                 display: none;
-            }
-
-            .nb {
-                font-weight: bold
             }
 
 
@@ -152,7 +161,7 @@
         }
 
         #cardActifTot:hover {
-            color: red;
+
 
             h6 {
                 display: none;
@@ -186,7 +195,7 @@
         }
 
         #cardTrajetTot:hover {
-            color: red;
+
 
             h6 {
                 display: none;
@@ -244,7 +253,8 @@
             }
 
             #cardTrajet:hover {
-                color: red;
+                color: #263238;
+
                 border-radius: 1rem;
             }
         }
@@ -263,6 +273,8 @@
         }
 
         #dataUser {
+            background-color: grey;
+            color: #263238;
             padding: .5rem;
             display: flex;
             margin: 0.5rem;
@@ -281,6 +293,7 @@
             img {
                 width: 3rem;
                 height: auto;
+                border: dotted;
             }
         }
     }
