btn switch user validate / user unvalide

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -221,4 +221,8 @@
   width: 3rem;
   height: auto;
   border: dotted;
+}
+
+#allUserPage {
+  background-image: url("../image/background/bric-wall.jpg");
 }/*# sourceMappingURL=style.css.map */
