--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -225,4 +225,21 @@
 
 #allUserPage {
   background-image: url("../image/background/bric-wall.jpg");
+}
+#allUserPage #ensembleUser .row .collection {
+  border: none;
+}
+#allUserPage #ensembleUser .row .collection .collection-item.avatar {
+  background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.4392156863), black);
+  border-radius: 1rem;
+}
+#allUserPage #ensembleUser .row .collection .collection-item.avatar img {
+  border: dotted;
+}
+#allUserPage #ensembleUser .row .collection .collection-item.avatar #userPseudo {
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+#allUserPage #ensembleUser .row .collection .collection-item.avatar #userEmail {
+  font-weight: bold;
 }/*# sourceMappingURL=style.css.map */
