--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -304,5 +304,34 @@
 #allUserPage {
     background-image: url("../image/background/bric-wall.jpg");
 
+    #ensembleUser {
+        .row {
+            .collection {
+                border: none;
+
+                .collection-item.avatar {
+                    background-image: linear-gradient(45deg, #00000070, black);
+                    border-radius: 1rem;
+
+                    img {
+                        border: dotted;
+
+                    }
+
+                    #userPseudo {
+                        font-weight: bold;
+                        font-size: 1.5rem;
+                    }
+
+                    #userEmail {
+                        font-weight: bold;
+
+                    }
+                }
+            }
+        }
+    }
+
+
 
 }
