--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -19,19 +19,35 @@
         border: solid grey;
     }
 
-    #dateDuJour {
-        background-color: rgba(255, 228, 196, 0.611);
-        color: rgb(57, 57, 57);
-        font-size: 2rem;
-        width: fit-content;
-        padding: .5rem;
-        border-radius: 1rem;
-        margin: .5rem;
-        font-weight: bold;
-        border: solid grey;
+    .container {
+        #dateDuJour {
+            background-color: rgba(255, 228, 196, 0.611);
+            color: rgb(57, 57, 57);
+            font-size: 2rem;
+            width: fit-content;
+            padding: .5rem;
+            border-radius: 1rem;
+            margin: .5rem;
+            font-weight: bold;
+            border: solid grey;
 
+        }
 
+        #pageAllUser {
+            background-color: rgba(255, 228, 196, 0.611);
+            color: rgb(57, 57, 57);
+            font-size: 2rem;
+            width: -moz-fit-content;
+            width: fit-content;
+            padding: 0.5rem;
+            border-radius: 1rem;
+            margin: 0.5rem;
+            font-weight: bold;
+            border: solid grey;
+        }
     }
+
+
 
     #sideNav {
         background-image: Radial-gradient(rgb(48, 48, 144), rgba(255, 228, 196, 0.611));
